@@ -521,7 +521,7 @@ ns_set_name_iconic (struct frame *f, Lisp_Object name, int explicit)
 static void
 ns_set_name (struct frame *f, Lisp_Object name, int explicit)
 {
-  NSView *view = FRAME_NS_VIEW (f);
+  NSView *view;
   NSTRACE (ns_set_name);
 
   if (ns_in_resize)
@@ -551,6 +551,8 @@ ns_set_name (struct frame *f, Lisp_Object name, int explicit)
     name = f->title;
 
   CHECK_STRING (name);
+
+  view = FRAME_NS_VIEW (f);
 
   /* Don't change the name if it's already NAME.  */
   if ([[[view window] title]
@@ -615,7 +617,7 @@ x_set_title (struct frame *f, Lisp_Object name, Lisp_Object old_name)
 void
 ns_set_name_as_filename (struct frame *f)
 {
-  NSView *view = FRAME_NS_VIEW (f);
+  NSView *view;
   Lisp_Object name;
   Lisp_Object buf = XWINDOW (f->selected_window)->buffer;
   const char *title;
@@ -637,6 +639,8 @@ ns_set_name_as_filename (struct frame *f)
     name = build_string([ns_app_name UTF8String]);
   else
     CHECK_STRING (name);
+
+  view = FRAME_NS_VIEW (f);
 
   title = FRAME_ICONIFIED_P (f) ? [[[view window] miniwindowTitle] UTF8String]
                                 : [[[view window] title] UTF8String];
